# python-banshee

./: Makefile  README.md  pyproject.toml
docs/: conf.py  quickstart.md
examples/: injector_with_classes.py  injector_with_functions.py  simple.py
src/banshee/: builder.py  bus.py  context.py  errors.py  message.py  registry.py  request.py  testing.py
src/banshee/extra/: injector.py
src/banshee/middleware/: causation.py  dispatch.py  gate.py  handle_after.py  identity.py
tests/fixture/: middleware.py  request.py
tests/unit/: test_handle_after_middleware.py  test_message.py  test_message_bus.py  test_middleware_chain.py  test_registry.py  test_simple_handler_factory.py  test_traceable_bus.py
