[tool.poetry]
name = "banshee"
version = "0.1.0"
description = "A command dispatcher and message bus implementation for python (ported to python 3.7+)."
authors = ["Joe Black <me@joeblack.nyc>"]
readme = "README.md"
packages = [{include = "banshee", from = "src"}]

[tool.poetry.dependencies]
python = "~3.7"
exceptiongroup = {version = "^1.0.0"}
injector = "^0.20.1"
ipython = "^7.31.0"

[tool.poetry.group.docs.dependencies]
myst-parser = "^0.17.0"
sphinx-material = { version = "^0.0.35", python = ">=3.7" }
sphinx-artisan-theme = { version = "^0.0.1-beta.1", python = "<3.7" }
autodocsumm = "^0.2.8"
sphinx-autobuild = "^2021.3.14"
sphinxcontrib-spelling = "^7.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.0.0"
shed = "^0.10.7"
pylint = "^2.0.0"
mypy = "^0.900"
pytest = "^7.0.0"
pytest-asyncio = "^0.20.0"
pytest-cov = "^3.0.0"
typeguard = "^2.13.3"
docformatter = "^1.4"
pytest-pylint = "^0.18.0"
pytest-mypy = "^0.9.0"
pydocstyle = "^6.1.0"
pytest-pydocstyle = "^2.3.0"
pyenchant = "^3.2.0"
freezegun = "^1.2.0"
dirty-equals = "^0.5.0"
pyupgrade = "^3.0.0"
mock = "^4.0.3"

[tool.poetry.extras]
injector = ["injector"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
known_localfolder = ['tests']

[tool.pylint.master]
load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.mccabe",
    "pylint.extensions.docstyle",
    "pylint.extensions.check_elif",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.docparams",
    "pylint.extensions.empty_comment",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
    "pylint.extensions.while_used",
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "to"]

[tool.pylint.messages_control]
disable = [
    "docstring-first-line-empty",
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.spelling]
spelling-dict = "en_US"
spelling-private-dict-file = ".dictionary"

[tool.pylint.similarities]
ignore-signatures = true
ignore-imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = "tests"
filterwarnings = [
    "error",
    "ignore::pytest.PytestRemovedIn8Warning",
]

[tool.pylint.parameter_documentation]
default-docstring-type = "sphinx"

[tool.mypy]
strict = true

[tool.pydocstyle]
add-ignore = [
    "D102",
    "D105",
    "D107",
    "D200",
    "D212",
]